--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.525.0",
     "next": "^15.3.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
@@ -63,6 +64,7 @@
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@types/node": "^22.15.3",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "eslint": "^9.30.0",
