feat: add dashboard layout and account management settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["aiforge", "cuid", "sonner", "vercel"]
+  "cSpell.words": [
+    "aiforge",
+    "cmdk",
+    "cuid",
+    "embla",
+    "sonner",
+    "vaul",
+    "vercel"
+  ]
 }
