--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -2,6 +2,7 @@
   "name": "@repo/auth",
   "version": "0.0.0",
   "dependencies": {
+    "@repo/db": "*",
     "@auth/prisma-adapter": "^2.10.0",
     "bcryptjs": "^3.0.2",
     "next-auth": "^5.0.0-beta.29",
