--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@repo/auth": "*",
     "@repo/db": "*",
     "@repo/ui": "*",
     "class-variance-authority": "^0.7.1",
