--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -42,6 +42,7 @@
     "@repo/auth": "*",
     "@repo/db": "*",
     "@repo/ui": "*",
+    "@types/qrcode": "^1.5.5",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
@@ -50,7 +51,9 @@
     "lucide-react": "^0.525.0",
     "next": "^15.3.0",
     "next-themes": "^0.4.6",
+    "node-2fa": "^2.0.3",
     "nodemailer": "^6.10.1",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
