--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -42,12 +42,14 @@
     "@repo/auth": "*",
     "@repo/db": "*",
     "@repo/ui": "*",
+    "@tanstack/react-table": "^8.21.3",
     "@types/qrcode": "^1.5.5",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "next": "^15.3.0",
     "next-themes": "^0.4.6",
@@ -58,6 +60,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^2.15.4",
     "sonner": "^2.0.6",
@@ -67,6 +70,7 @@
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^22.15.3",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "19.1.0",
