--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -55,6 +55,7 @@
     "next-themes": "^0.4.6",
     "node-2fa": "^2.0.3",
     "nodemailer": "^6.10.1",
+    "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
