feat: add team member management with invite system and email notifications

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["Allyan", "Amar", "Fiaz", "Sajid"]
+  "cSpell.words": [
+    "Allyan",
+    "Amar",
+    "evilrabbit",
+    "Fiaz",
+    "maxleiter",
+    "Sajid",
+    "shadcn"
+  ]
 }
