--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -1,11 +1,15 @@
 {
   "name": "app",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
+    "lint": "next lint --max-warnings 0",
+    "lint:fix": "next lint --fix",
+    "check-types": "tsc --noEmit",
     "email": "email dev --dir emails --port 3001"
   },
   "dependencies": {
@@ -36,6 +40,9 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@repo/auth": "*",
+    "@repo/db": "*",
+    "@repo/ui": "*",
     "@react-email/components": "^0.5.7",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
