fix: improve model loading debugging and fix .dockerignore blocking model files
- Remove model file extensions (*.pkl, *.pt, *.h5, etc.) from .dockerignore
- Add detailed logging to model loading startup process
- Add verification step after model loading
- Add debug logging to health check endpoint
- Add Docker image verification to check model files are included

This fixes ZIP deployment failures where model files were being blocked by .dockerignore

--- a/apps/api/.dockerignore
+++ b/apps/api/.dockerignore
@@ -50,13 +50,10 @@ logs/
 .env.local
 .env.*.local
 
-# Downloaded models (we download from GCS at runtime)
-models/
-*.pt
-*.pth
-*.h5
-*.pkl
-*.onnx
+# NOTE: Model files are NOT ignored here
+# For ZIP/Git deployments, model files MUST be included in the Docker image
+# They are copied to /app/user_model/ during the build
+# For single-file deployments, models are downloaded from GCS at runtime
 
 # Build artifacts
 build/
